# sotaapp2

./: .env  .env.example  .env.test  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.sqlite  Makefile.toml  README.md  REFACTORING.md  docker-compose.test.yml  docker-compose.yaml  fly.toml  migrations
.cargo/: config.toml
.serena/: project.yml
.sqlx/: query-0f57684373f0b40413fc514654e4951b798a6c46daeb38e636261e6d10e84456.json  query-13b9f28c8eaf12e7c1b7826e0c05f4237b234d35d80b75b6c767aed190cf951f.json  query-1622df3797949d0e137a132545112a87be14af74494a527d3f06248b00b2d683.json  query-195f133fb873cbf7f4f0484d312b08d23f9d2b85a8725734ae6a6d6651c3425f.json  query-3002b45307eb791a56c09e0fc87fb1eb8b679265a2162f3ade56a5c2d754b3c5.json  query-380e1ba97a2570a5dc60543b421707245243637b1dd0ce3e3421a3161f1c30de.json  query-475939ae5768be18ac7dd2b3ce73992df45b47f03a429c93c6f7937d1485c0cd.json  query-4f423e8eb4a50366c706275a6a85e76d39c11e428f5cc27823fb4b43a617f784.json  query-4f475df5bd73dbdeeb4930269dddbcf8bb009a0251caa2f55ea674c6a4947cc1.json  query-52242a6f342d0676d7a70025b3c28d840f6c2db706ed685200ed4b64baf25326.json  query-5297829c607167866f0780fe3815d50f1ae88dd059aaabd032f76b7d167ebed2.json  query-53bd57695bd23a1ebe93f60f1b17503cb5a7c11a4706110542c3ed14e5956005.json  query-58ad8c1be921869f5cae91ea875ae0a5e1f7ed620d43e14226290a25cfbc2444.json  query-59aa2566b196e5b2376c3eb06c7b44e3c5246e10cea305007a33661e7bd5ce04.json  query-650f93f7be7173ccd13990b28c682ba222b90cea741dfe84e8b334ce67af8274.json  query-6f50f6bd88437094bad6e5934cc1e5614a622881377fc4ea96ac5ce0ae04234e.json  query-73eeedf3f86b54dcd88e1c40a08441598019c2175b8c702d3cc77381306a1bd6.json  query-75e64e77a665653f0bbae69b55d1f7fe7a9b552c2b15d393d4cd8962c4468b63.json  query-78d1b07c7b92e32976d76671309a3941d6d922fc36f34295116ee5393de67cbf.json  query-7a5c44c18bd9189771b833478be0716c4c816c90c98d5d5db8041766d4bc6acd.json  query-7c2dfdc431ee4b3704bea5d6970cbf85fdca352acd4667ac02479f0ad7f230d1.json  query-7e015cf84c7b04ee9b13bfb38879290f5d22cc9606ce064e804ee317562996b7.json  query-8b465176e6679c1a94d71388dc9fd16328b495d9224c8f1a174d166112e97fac.json  query-933cbd409a7b0ed0c9412f0bab2dac00302bc18d7a2058261ce49304fc95bd01.json  query-a1ce0eabb2032738d24805f257e3fca8f14aa8fc8edfaaf7eb60ec1b35640b67.json  query-b1ba72e3153b55b5c7cb4eb6084589d4f16e3a4e8ec7ef6789a05cd4edbf5084.json  query-b323e1970d20ab9fd50fd35f9538f3ba77145bf3a34795897d9c8bfe6be60eed.json  query-bbf52bf32c3fd52e1d752af9491304ce639cdcad359f4bdfb257e0cd3a04a9c9.json  query-c87a591bda60e95eb2923b20d3e0213bb3d51fa7722f01f37a4ed7097062b56d.json  query-cb846e30a3e65f602f81f79e9993939a4c0a171d7a372dc3daff8b8c8a24f26d.json  query-ccf940f312ffd95ac6189b056ddd5c51e3581390709e653fe08056edea227652.json  query-d26f1135a2319744e8da8195338ffcd67ec63a0a2ca1e0548b9d1e3e64fb7575.json  query-d2e9b06a2e0ceb264dc718f9ba5b849c67e63d898e54fbad4913a61c2b6732d2.json  (+4 more)
adapter/: Cargo.toml
adapter/migrations/: 20241130234000_start.down.sql  20241130234000_start.up.sql
adapter/migrations/postgis/: 20241130234000_start.down.sql  20241130234000_start.up.sql
adapter/migrations/sqlite/: 20241130234000_start.down.sql  20241130234000_start.up.sql
adapter/src/: aprs.rs  geomag.rs  lib.rs  minikvs.rs
adapter/src/aprs/: mod.rs
adapter/src/database/: mod.rs
adapter/src/database/implement/: mod.rs
adapter/src/database/implement/postgis/: activation.rs  aprslog.rs  healthcheck.rs  locator.rs  pota_reference.rs  querybuilder.rs  sota_reference.rs
adapter/src/database/implement/sqlite/: activation.rs  aprslog.rs  locator.rs  mod.rs  pota_reference.rs  querybuilder.rs  sota_reference.rs
adapter/src/database/model/: activation.rs  aprslog.rs  locator.rs  mod.rs  pota.rs  sota.rs
adapter/src/implement/: activation.rs  aprs.rs  geomag.rs  healthcheck.rs  locator.rs  mod.rs  pota_activation.rs  pota_database.rs  pota_reference.rs  querybuilder.rs  sota_activation.rs  sota_database.rs  sota_reference.rs
adapter/src/implement/postgis/: activation.rs  locator.rs  pota_reference.rs  querybuilder.rs  sota_reference.rs
adapter/src/implement/sqlite/: activation.rs  pota_reference.rs  querybuilder.rs  sota_reference.rs
adapter/test-data/: activator_parks.csv  aprs_v28_UTF8.csv  geomag-indices.txt  hunter_parks.csv  pilgrim-all.csv  pota202411.csv  potaalerts.json  potaspots.json  summitslist-ja.csv
adapter/tests/: aprs_diagnosis.rs
admin/: package-lock.json  package.json  svelte.config.js
api/: Cargo.toml
api/src/: lib.rs  openapi.rs
api/src/aggregator/: alerts_spots.rs  aprs_packet.rs  builder.rs  geomag.rs  mod.rs  summitlist.rs  updatelist.rs
api/src/handler/: activation.rs  admin.rs  auth.rs  award_admin.rs  fle.rs  geomag.rs  health.rs  locator.rs  logconv.rs  mod.rs  multipart.rs  pota.rs  propagation.rs  search.rs  sota.rs  v2.rs  wspr.rs
api/src/model/: activation.rs  alerts.rs  aprslog.rs  auth.rs  award.rs  geomag.rs  group.rs  import.rs  locator.rs  mod.rs  param.rs  pota.rs  search.rs  sota.rs  spots.rs
common/: Cargo.toml
common/src/: award_config.rs  config.rs  csv_reader.rs  error.rs  http.rs  lib.rs  utils.rs
data_access/: Cargo.toml
data_access/migrations/: 20241124053828_create-initial-tables.sql  20241130234000_start.up.sql
data_access/src/: health.rs  interface.rs  lib.rs  sota.rs
data_access/src/database/: mod.rs
data_access/src/implement/: health.rs  mod.rs  pota_activation.rs  pota_database.rs  querybuilder.rs  sota_activation.rs  sota_database.rs
data_access/src/repositry/: health.rs  sota.rs
service/: Cargo.toml
service/examples/: test_pdf_gen.rs
service/src/: interface.rs  lib.rs  services.rs
service/src/implement/: admin_periodic.rs  admin_service.rs  aprs_service.rs  award_calculator.rs  award_pdf.rs  mod.rs  pota_log_service.rs  sota_log_service.rs  user_service.rs  wspr_service.rs
service/src/implement/fle/: compiler.rs  mod.rs  output.rs  tokenizer.rs  types.rs
service/src/implement/logconv/: adif.rs  converter.rs  hamlog.rs  mod.rs  types.rs
service/src/model/: award.rs  locator.rs  mod.rs  pota.rs  sota.rs
(+188 files in other folders)
