[package]
name = "sotaapp2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "service", "adapter", "common", "registry", "domain"]

[workspace.dependencies]
domain = { path = "./domain" }
common = { path = "./common" }
api = { path = "./api" }
service = { path = "./service" }
adapter = { path = "./adapter" }
registry = { path = "./registry" }

anyhow = "^1.0"
derive-new = "0.7.0"
uuid = { version = "^1.11", features = ["v4", "fast-rng", "macro-diagnostics"] }
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "http2", "multipart", "ws"] }
axum-extra = { version = "0.9.6", features = [
    "cookie",
    "cookie-private",
    "typed-header",
    "multipart",
] }
apalis = "^0.6.2"
apalis-cron = "^0.6.2"
tower = "0.5.1"
tower-http = { version = "^0.6", features = ["trace", "cors", "fs"] }
tokio = { version = "^1.41.1", features = ["full"] }

sqlx = { version = "^0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "postgres",
    "macros",
    "migrate",
] }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
thiserror = "^2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.34", features = ["serde"] }
chrono-tz = { version = "^0.10", features = ["filter-by-regex", "serde"] }
csv = "1.3.1"
rstest = "0.23.0"
shaku = "0.6.2"
shaku_axum = "0.5.0"

[dependencies]
api.workspace = true
service.workspace = true
common.workspace = true
domain.workspace = true
adapter.workspace = true
registry.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
shaku_axum.workspace = true
