[package]
name = "sotaapp2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["api", "service", "adapter", "common", "registry", "domain"]

[workspace.dependencies]
domain = { path = "./domain" }
common = { path = "./common" }
api = { path = "./api" }
service = { path = "./service" }
adapter = { path = "./adapter", features = ["sqlite"] }
registry = { path = "./registry", features = ["sqlite"] }

anyhow = "^1.0"
derive-new = "0.7.0"
firebase-auth-sdk = "0.1.0"
uuid = { version = "^1.15.1", features = [
    "v4",
    "fast-rng",
    "serde",
    "macro-diagnostics",
] }
async-trait = "0.1.83"
axum = { version = "0.8.1", features = ["macros", "http2", "multipart", "ws"] }
axum-extra = { version = "0.10.0", features = [
    "cookie",
    "cookie-private",
    "typed-header",
    "multipart",
] }

aprs-message = { git = "https://github.com/jl1nie/aprs-message.git" }
maidenhead = "0.1.0"
geographiclib-rs = "0.2.4"
tower = "0.5.2"
tower-http = { version = "^0.6", features = ["trace", "cors", "fs"] }
tokio = { version = "^1.42", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
sqlx = { version = "^0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "uuid",
    "chrono",
    "postgres",
    "sqlite",
    "macros",
    "migrate",
] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
typeshare = "1.0.4"
reqwest = { version = "^0.12", features = ["json"] }
thiserror = "^2.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
chrono = { version = "0.4.40", features = ["serde"] }
chrono-tz = { version = "^0.10", features = ["filter-by-regex", "serde"] }
csv = "1.3.1"
shaku = "0.6.2"
shaku_axum = "0.6.0"
regex = "1.5.4"
fastrand = "2.3.0"

[dependencies]
api.workspace = true
service.workspace = true
chrono.workspace = true
common.workspace = true
domain.workspace = true
adapter.workspace = true
registry.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower-http.workspace = true
shaku_axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
aprs-message.workspace = true
firebase-auth-sdk.workspace = true
