[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[features]
sqlite = []

[dependencies]
domain.workspace = true
anyhow.workspace = true
async-trait.workspace = true
derive-new.workspace = true
common.workspace = true
sqlx.workspace = true
shaku.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde.workspace = true
aprs-message.workspace = true
tokio-cron-scheduler.workspace = true

[dev-dependencies]
csv.workspace = true
serde.workspace = true
