[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
serde.workspace = true
axum.workspace = true
firebase-auth-sdk.workspace = true
tokio.workspace = true
chrono.workspace = true
reqwest.workspace = true
service.workspace = true
registry.workspace = true
common.workspace = true
domain.workspace = true
serde_json.workspace = true
shaku_axum.workspace = true
shaku.workspace = true
tokio-cron-scheduler.workspace = true
tracing.workspace = true
maidenhead.workspace = true
