[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
derive-new.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
regex.workspace = true
reqwest.workspace = true
