[package]
name = "data_access"
version = "0.1.0"
edition = "2021"

[dependencies]
domain.workspace = true
anyhow.workspace = true
async-trait.workspace = true
derive-new.workspace = true
common.workspace = true
sqlx.workspace = true
shaku.workspace = true

[dev-dependencies]
csv.workspace = true
serde.workspace = true
