[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
anyhow.workspace = true
serde.workspace = true
csv.workspace = true
shaku.workspace = true
common.workspace = true
domain.workspace = true
adapter.workspace = true
tracing.workspace = true
regex.workspace = true
maidenhead.workspace = true
aprs-message.workspace = true
plotters.workspace = true
serde_json.workspace = true
zip.workspace = true
once_cell.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
